// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrearsDashboardComposition /> arrears list validation 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Connect(ArrearsFiltersComposition)
      onChange={[Function]}
    />
  </div>
  <div
    className="col-lg-9"
  >
    <WithTheme(Component)
      arrears={
        Array [
          Object {
            "createdOn": "2021-02-15T16:13:48+00:00",
            "currentBalance": 0,
            "daysInArrears": 16,
            "id": "abc1",
            "lastModified": "2021-03-03T07:23:43+00:00",
            "openTaskCount": 1,
            "ownerOutputModel": Object {
              "id": "xyz1",
              "name": "Eileen O Neill",
              "type": "systemuser",
            },
            "priority": 54361,
            "status": "System Paused",
            "tenancy": Object {
              "address": "Flat 3 313 Harrow Road, London, 3RJ",
              "id": 1,
              "name": "Dummy Pommells",
            },
            "title": "Arrears - 50101743",
          },
          Object {
            "createdOn": "2021-02-15T16:13:48+00:00",
            "currentBalance": 0,
            "daysInArrears": 16,
            "id": "abc2",
            "lastModified": "2021-03-03T07:23:43+00:00",
            "openTaskCount": 1,
            "ownerOutputModel": Object {
              "id": "xyz2",
              "name": "Eileen O Neill",
              "type": "systemuser",
            },
            "priority": 54361,
            "status": "System Paused",
            "tenancy": Object {
              "address": "Flat 3 313 Harrow Road, London, 3RJ",
              "id": 2,
              "name": "Dummy Pommells",
            },
            "title": "Arrears - 50101743",
          },
          Object {
            "createdOn": "2021-02-15T16:13:48+00:00",
            "currentBalance": 0,
            "daysInArrears": 16,
            "id": "abc3",
            "lastModified": "2021-03-03T07:23:43+00:00",
            "openTaskCount": 1,
            "ownerOutputModel": Object {
              "id": "xyz3",
              "name": "Eileen O Neill",
              "type": "systemuser",
            },
            "priority": 54361,
            "status": "System Paused",
            "tenancy": Object {
              "address": "Flat 3 313 Harrow Road, London, 3RJ",
              "id": 3,
              "name": "Dummy Pommells",
            },
            "title": "Arrears - 50101743",
          },
          Object {
            "createdOn": "2021-02-15T16:13:48+00:00",
            "currentBalance": 0,
            "daysInArrears": 16,
            "id": "abc4",
            "lastModified": "2021-03-03T07:23:43+00:00",
            "openTaskCount": 1,
            "ownerOutputModel": Object {
              "id": "xyz4",
              "name": "Eileen O Neill",
              "type": "systemuser",
            },
            "priority": 54361,
            "status": "System Paused",
            "tenancy": Object {
              "address": "Flat 3 313 Harrow Road, London, 3RJ",
              "id": 4,
              "name": "Dummy Pommells",
            },
            "title": "Arrears - 50101743",
          },
          Object {
            "createdOn": "2021-02-15T16:13:48+00:00",
            "currentBalance": 0,
            "daysInArrears": 16,
            "id": "abc5",
            "lastModified": "2021-03-03T07:23:43+00:00",
            "openTaskCount": 1,
            "ownerOutputModel": Object {
              "id": "xyz5",
              "name": "Eileen O Neill",
              "type": "systemuser",
            },
            "priority": 54361,
            "status": "System Paused",
            "tenancy": Object {
              "address": "Flat 3 313 Harrow Road, London, 3RJ",
              "id": 5,
              "name": "Dummy Pommells",
            },
            "title": "Arrears - 50101743",
          },
          Object {
            "createdOn": "2021-02-15T16:13:48+00:00",
            "currentBalance": 0,
            "daysInArrears": 16,
            "id": "abc6",
            "lastModified": "2021-03-03T07:23:43+00:00",
            "openTaskCount": 1,
            "ownerOutputModel": Object {
              "id": "xyz6",
              "name": "Eileen O Neill",
              "type": "systemuser",
            },
            "priority": 54361,
            "status": "System Paused",
            "tenancy": Object {
              "address": "Flat 3 313 Harrow Road, London, 3RJ",
              "id": 6,
              "name": "Dummy Pommells",
            },
            "title": "Arrears - 50101743",
          },
        ]
      }
      cardLabels={
        Object {
          "address": "Address",
          "currentBalance": "Current balance",
          "heading": "Arrears",
          "notificationDate": "Notification date",
          "openTasks": "Open tasks",
          "tenantName": "Tenant name",
        }
      }
      filterLabel="Arrears - System Paused (50)"
      getArrearsSummary={[Function]}
      loading={false}
      noDataMsg="Gotham is in danger"
      resultsCount={0}
      userId="ABC123"
      youText=""
    />
  </div>
  <aside
    className="col-lg-3"
  >
    <ErrorBoundary
      messageOnScreen={null}
    >
      <styled.div>
        <C
          disable={false}
          isButtonBottomAligned={true}
          openPatchSelect={[Function]}
          patches={
            Array [
              Object {
                "customName": false,
                "fullname": "John Smith",
                "name": "John Smith",
                "patchName": "Hello world",
              },
              Object {
                "customName": false,
                "fullname": "Jane Smith",
                "name": "Jane Smith",
                "patchName": "Some other name",
              },
            ]
          }
        />
      </styled.div>
    </ErrorBoundary>
    <Connect(PatchStatisticsCompositions) />
  </aside>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ArrearsDashboardComposition /> my tasks user tasks with more result count 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Connect(ArrearsFiltersComposition)
      onChange={[Function]}
    />
  </div>
  <div
    className="col-lg-9"
  >
    <WithTheme(Component)
      cardLabels={
        Object {
          "address": "Address",
          "customerName": "Customer Name",
          "dueDate": "Due Date",
          "heading": "Tasks",
          "overdue": "overdue!",
          "status": "Status",
          "taskOwner": "Task Owner",
          "title": "Title",
        }
      }
      getNextPage={[Function]}
      key="myTasksSel"
      kind="myTasks"
      loading={false}
      noDataMsg="My Gotham is in danger"
      resultCount={0}
      tasks={Array []}
      userId="ABC123"
      youText=""
    />
  </div>
  <aside
    className="col-lg-3"
  >
    <ErrorBoundary
      messageOnScreen={null}
    >
      <styled.div>
        <C
          disable={false}
          isButtonBottomAligned={true}
          openPatchSelect={[Function]}
          patches={
            Array [
              Object {
                "customName": false,
                "fullname": "John Smith",
                "name": "John Smith",
                "patchName": "Hello world",
              },
              Object {
                "customName": false,
                "fullname": "Jane Smith",
                "name": "Jane Smith",
                "patchName": "Some other name",
              },
            ]
          }
        />
      </styled.div>
    </ErrorBoundary>
    <Connect(PatchStatisticsCompositions) />
  </aside>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ArrearsDashboardComposition /> selected user tasks with more result count 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Connect(ArrearsFiltersComposition)
      onChange={[Function]}
    />
  </div>
  <div
    className="col-lg-9"
  >
    <WithTheme(Component)
      cardLabels={
        Object {
          "address": "Address",
          "customerName": "Customer Name",
          "dueDate": "Due Date",
          "heading": "Tasks",
          "overdue": "overdue!",
          "status": "Status",
          "taskOwner": "Task Owner",
          "title": "Title",
        }
      }
      getNextPage={[Function]}
      key="userTasksSel"
      kind="selectedUserTasks"
      loading={false}
      noDataMsg=""
      resultCount={16}
      tasks={
        Array [
          Object {
            "assetName": "abc",
            "dueDate": "2021-01-21T18:30:00+00:00",
            "id": "d710fe3a-7142-481a-be10-0c0ba5e55dfa",
            "status": "Open",
            "tenantName": "xyz",
            "title": "Task 10 title",
            "type": "manual",
          },
          Object {
            "assetName": "abc",
            "dueDate": "2021-01-21T18:30:00+00:00",
            "id": "69b8964e-53ad-4d07-9e25-160caf52f3e6",
            "status": "Open",
            "tenantName": "xyz",
            "title": "Task 8",
            "type": "manual",
          },
          Object {
            "assetName": "abc",
            "dueDate": "2021-01-21T18:30:00+00:00",
            "id": "8ec08b38-cd64-4d3f-93bd-254afb8dd71e",
            "status": "Open",
            "tenantName": "xyz",
            "title": "Task 2",
            "type": "manual",
          },
          Object {
            "assetName": "abc",
            "dueDate": "2021-01-21T18:30:00+00:00",
            "id": "ec433738-235f-40b5-8472-2623dafdc7b3",
            "status": "Open",
            "tenantName": "xyz",
            "title": "Task 4",
            "type": "manual",
          },
          Object {
            "assetName": "abc",
            "dueDate": "2021-01-28T18:30:00+00:00",
            "id": "c18968ff-5ed6-4bc1-bd49-4ec9785c2767",
            "status": "Open",
            "tenantName": "xyz",
            "title": "Task 5",
            "type": "manual",
          },
          Object {
            "assetName": "abc",
            "dueDate": "2021-02-24T18:30:00+00:00",
            "id": "f2f5b601-06a6-4439-ac64-797a058ef063",
            "status": "Open",
            "tenantName": "xyz",
            "title": "Tap Repair",
            "type": "manual",
          },
        ]
      }
      userId="ABC123"
      youText=""
    />
  </div>
  <aside
    className="col-lg-3"
  >
    <ErrorBoundary
      messageOnScreen={null}
    >
      <styled.div>
        <C
          disable={false}
          isButtonBottomAligned={true}
          openPatchSelect={[Function]}
          patches={
            Array [
              Object {
                "customName": false,
                "fullname": "John Smith",
                "name": "John Smith",
                "patchName": "Hello world",
              },
              Object {
                "customName": false,
                "fullname": "Jane Smith",
                "name": "Jane Smith",
                "patchName": "Some other name",
              },
            ]
          }
        />
      </styled.div>
    </ErrorBoundary>
    <Connect(PatchStatisticsCompositions) />
  </aside>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ArrearsDashboardComposition /> should render the page 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Connect(ArrearsFiltersComposition)
      onChange={[Function]}
    />
  </div>
  <div
    className="col-lg-9"
  >
    <WithTheme(Component)
      cardLabels={
        Object {
          "address": "Address",
          "customerName": "Customer Name",
          "dueDate": "Due Date",
          "heading": "Tasks",
          "overdue": "overdue!",
          "status": "Status",
          "taskOwner": "Task Owner",
          "title": "Title",
        }
      }
      getNextPage={[Function]}
      key="myTasksSel"
      kind="myTasks"
      loading={false}
      noDataMsg="My Gotham is in danger"
      resultCount={0}
      tasks={Array []}
      userId="ABC123"
      youText=""
    />
  </div>
  <aside
    className="col-lg-3"
  >
    <ErrorBoundary
      messageOnScreen={null}
    >
      <styled.div>
        <C
          disable={false}
          isButtonBottomAligned={true}
          openPatchSelect={[Function]}
          patches={
            Array [
              Object {
                "customName": false,
                "fullname": "John Smith",
                "name": "John Smith",
                "patchName": "Hello world",
              },
              Object {
                "customName": false,
                "fullname": "Jane Smith",
                "name": "Jane Smith",
                "patchName": "Some other name",
              },
            ]
          }
        />
      </styled.div>
    </ErrorBoundary>
    <Connect(PatchStatisticsCompositions) />
  </aside>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ArrearsDashboardComposition /> should render the page while loading arrears and tasks 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Connect(ArrearsFiltersComposition)
      onChange={[Function]}
    />
  </div>
  <div
    className="col-lg-9"
  >
    <p
      isSmall={false}
    />
  </div>
  <aside
    className="col-lg-3"
  >
    <ErrorBoundary
      messageOnScreen={null}
    >
      <styled.div>
        <C
          disable={false}
          isButtonBottomAligned={true}
          openPatchSelect={[Function]}
          patches={
            Array [
              Object {
                "customName": false,
                "fullname": "John Smith",
                "name": "John Smith",
                "patchName": "Hello world",
              },
              Object {
                "customName": false,
                "fullname": "Jane Smith",
                "name": "Jane Smith",
                "patchName": "Some other name",
              },
            ]
          }
        />
      </styled.div>
    </ErrorBoundary>
    <Connect(PatchStatisticsCompositions) />
  </aside>
</withRouter(Connect(PageContentComposition))>
`;

exports[`<ArrearsDashboardComposition /> tasks patches with more result count 1`] = `
<withRouter(Connect(PageContentComposition))>
  <div
    className="col-lg-9"
  >
    <Connect(ArrearsFiltersComposition)
      onChange={[Function]}
    />
  </div>
  <div
    className="col-lg-9"
  >
    <WithTheme(Component)
      cardLabels={
        Object {
          "address": "Address",
          "customerName": "Customer Name",
          "dueDate": "Due Date",
          "heading": "Tasks",
          "overdue": "overdue!",
          "status": "Status",
          "taskOwner": "Task Owner",
          "title": "Title",
        }
      }
      getNextPage={[Function]}
      key="tasksSel"
      kind="Tasks"
      loading={false}
      noDataMsg="Gotham is in danger"
      resultCount={0}
      tasks={Array []}
      userId="ABC123"
      youText=""
    />
  </div>
  <aside
    className="col-lg-3"
  >
    <ErrorBoundary
      messageOnScreen={null}
    >
      <styled.div>
        <C
          disable={false}
          isButtonBottomAligned={true}
          openPatchSelect={[Function]}
          patches={
            Array [
              Object {
                "customName": false,
                "fullname": "John Smith",
                "name": "John Smith",
                "patchName": "Hello world",
              },
              Object {
                "customName": false,
                "fullname": "Jane Smith",
                "name": "Jane Smith",
                "patchName": "Some other name",
              },
            ]
          }
        />
      </styled.div>
    </ErrorBoundary>
    <Connect(PatchStatisticsCompositions) />
  </aside>
</withRouter(Connect(PageContentComposition))>
`;
